--- a/testingAgents.ipynb
+++ b/testingAgents.ipynb
@@ -6,7 +6,38 @@
    "id": "ec738350-2043-416f-a0f2-7f1e837e9fdb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection \n",
+    "\n",
+    "model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
+    "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device = \"cpu\"\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(model_id)\n",
+    "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id).to(device)\n",
+    "\n",
+    "image_url = \"\"\n",
+    "image = Image.open(requests.get(image_url, stream=True).raw)\n",
+    "# Check for cats and remote controls\n",
+    "# VERY important: text queries need to be lowercased + end with a dot\n",
+    "text = \"a cat. a remote control.\"\n",
+    "\n",
+    "inputs = processor(images=image, text=text, return_tensors=\"pt\").to(device)\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "results = processor.post_process_grounded_object_detection(\n",
+    "    outputs,\n",
+    "    inputs.input_ids,\n",
+    "    box_threshold=0.4,\n",
+    "    text_threshold=0.3,\n",
+    "    target_sizes=[image.size[::-1]]\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
