--- a/testingAgents.ipynb
+++ b/testingAgents.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ec738350-2043-416f-a0f2-7f1e837e9fdb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -17,14 +19,23 @@
     "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device = \"cpu\"\n",
     "\n",
-    "processor = AutoProcessor.from_pretrained(model_id)\n",
-    "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id).to(device)\n",
-    "\n",
-    "image_url = \"\"\n",
-    "image = Image.open(requests.get(image_url, stream=True).raw)\n",
+    "processor = AutoProcessor.from_pretrained(model_id, trust_remote_code=True)\n",
+    "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id, trust_remote_code=True).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "318e42a8-0f32-4a1f-9eae-8d7a4c94e65d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_url = \"cat.jpg\"\n",
+    "# image = Image.open(requests.get(image_url, stream=True).raw)\n",
+    "image = Image.open(image_url).convert(\"RGB\")\n",
     "# Check for cats and remote controls\n",
     "# VERY important: text queries need to be lowercased + end with a dot\n",
-    "text = \"a cat. a remote control.\"\n",
+    "text = \"cat.\"\n",
     "\n",
     "inputs = processor(images=image, text=text, return_tensors=\"pt\").to(device)\n",
     "with torch.no_grad():\n",
@@ -38,13 +49,61 @@
     "    target_sizes=[image.size[::-1]]\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ede5bd26-c6ff-45b0-a49f-721bf475d240",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'scores': tensor([0.9497]),\n",
+       "  'boxes': tensor([[140.1010,  36.8892, 488.1628, 295.3597]]),\n",
+       "  'text_labels': ['cat'],\n",
+       "  'labels': ['cat']}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "586211c7-d6a8-4b2b-a60e-f0a830dfecb3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e3fe2e1f-0755-4f01-9cdc-48ce29416550",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/bin/python\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (Loan Agent)",
    "language": "python",
-   "name": "python3"
+   "name": "loanagent"
   },
   "language_info": {
    "codemirror_mode": {
