--- a/testingAgents.ipynb
+++ b/testingAgents.ipynb
@@ -2,70 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ec738350-2043-416f-a0f2-7f1e837e9fdb",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "import torch\n",
-    "from PIL import Image\n",
-    "from transformers import AutoProcessor, AutoModelForZeroShotObjectDetection \n",
-    "\n",
-    "model_id = \"IDEA-Research/grounding-dino-tiny\"\n",
-    "# device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "device = \"cpu\"\n",
-    "\n",
-    "processor = AutoProcessor.from_pretrained(model_id, trust_remote_code=True)\n",
-    "model = AutoModelForZeroShotObjectDetection.from_pretrained(model_id, trust_remote_code=True).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "318e42a8-0f32-4a1f-9eae-8d7a4c94e65d",
+   "execution_count": 2,
+   "id": "d3e735d3-1df9-4dfd-a2e5-0a71ad0da37e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/AutoApplyAgent/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
-    "image_url = \"cat.jpg\"\n",
-    "# image = Image.open(requests.get(image_url, stream=True).raw)\n",
-    "image = Image.open(image_url).convert(\"RGB\")\n",
-    "# Check for cats and remote controls\n",
-    "# VERY important: text queries need to be lowercased + end with a dot\n",
-    "text = \"cat.\"\n",
+    "from ultralyticsplus import YOLO, render_result\n",
     "\n",
-    "inputs = processor(images=image, text=text, return_tensors=\"pt\").to(device)\n",
-    "with torch.no_grad():\n",
-    "    outputs = model(**inputs)\n",
-    "\n",
-    "results = processor.post_process_grounded_object_detection(\n",
-    "    outputs,\n",
-    "    inputs.input_ids,\n",
-    "    box_threshold=0.4,\n",
-    "    text_threshold=0.3,\n",
-    "    target_sizes=[image.size[::-1]]\n",
-    ")"
+    "# load model\n",
+    "model = YOLO('foduucom/web-form-ui-field-detection')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "ede5bd26-c6ff-45b0-a49f-721bf475d240",
+   "execution_count": 3,
+   "id": "dacad4c5-a565-4e5c-85db-f9416745e184",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'scores': tensor([0.9497]),\n",
-       "  'boxes': tensor([[140.1010,  36.8892, 488.1628, 295.3597]]),\n",
-       "  'text_labels': ['cat'],\n",
-       "  'labels': ['cat']}]"
+       "<ultralyticsplus.ultralytics_utils.YOLO at 0x105a69490>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ffb42304-05a1-4682-a962-1d24a3449504",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "image 1/1 /Users/utkarshsharma/Desktop/Current_Projects/AutoApplyAgent/testss.png: 416x640 1 first-name, 3 last-names, 1 phone-num, 313.8ms\n",
+      "Speed: 8.1ms preprocess, 313.8ms inference, 0.9ms postprocess per image at shape (1, 3, 640, 640)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[6.32000e+02, 6.71000e+02, 2.01700e+03, 8.64000e+02, 4.06714e-01, 2.10000e+01],\n",
+      "        [6.27000e+02, 8.80000e+02, 2.02800e+03, 1.08200e+03, 4.06151e-01, 2.70000e+01],\n",
+      "        [4.00000e+01, 5.98000e+02, 6.08000e+02, 7.25000e+02, 2.92085e-01, 2.10000e+01],\n",
+      "        [6.28000e+02, 6.67000e+02, 2.02900e+03, 8.66000e+02, 2.63097e-01, 1.60000e+01],\n",
+      "        [4.30000e+01, 7.49000e+02, 5.94000e+02, 8.80000e+02, 2.50968e-01, 2.10000e+01]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set model parameters\n",
+    "model.overrides['conf'] = 0.25  # NMS confidence threshold\n",
+    "model.overrides['iou'] = 0.45  # NMS IoU threshold\n",
+    "model.overrides['agnostic_nms'] = False  # NMS class-agnostic\n",
+    "model.overrides['max_det'] = 1000  # maximum number of detections per image\n",
+    "\n",
+    "# set image\n",
+    "image = 'testss.png'\n",
+    "\n",
+    "# perform inference\n",
+    "results = model.predict(image)\n",
+    "\n",
+    "# observe results\n",
+    "print(results[0].boxes)\n",
+    "render = render_result(model=model, image=image, result=results[0])\n",
+    "render.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "58abd2a3-9768-42f4-a834-0b16a4240b05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Ultralytics YOLO <class 'ultralytics.yolo.engine.results.Boxes'> masks\n",
+       " type: <class 'torch.Tensor'>\n",
+       " shape: torch.Size([5, 6])\n",
+       " dtype: torch.float32\n",
+       "  + tensor([[6.32000e+02, 6.71000e+02, 2.01700e+03, 8.64000e+02, 4.06714e-01, 2.10000e+01],\n",
+       "         [6.27000e+02, 8.80000e+02, 2.02800e+03, 1.08200e+03, 4.06151e-01, 2.70000e+01],\n",
+       "         [4.00000e+01, 5.98000e+02, 6.08000e+02, 7.25000e+02, 2.92085e-01, 2.10000e+01],\n",
+       "         [6.28000e+02, 6.67000e+02, 2.02900e+03, 8.66000e+02, 2.63097e-01, 1.60000e+01],\n",
+       "         [4.30000e+01, 7.49000e+02, 5.94000e+02, 8.80000e+02, 2.50968e-01, 2.10000e+01]])]"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,34 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "586211c7-d6a8-4b2b-a60e-f0a830dfecb3",
+   "execution_count": 9,
+   "id": "5ba0ae65-01a6-4477-bf6b-0bbb546124f5",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e3fe2e1f-0755-4f01-9cdc-48ce29416550",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/bin/python\n"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "# Load model directly\n",
+    "from transformers import AutoModel\n",
+    "model = AutoModel.from_pretrained(\"microsoft/layoutlmv3-base\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (Loan Agent)",
+   "display_name": "AutoApplyAgent",
    "language": "python",
-   "name": "loanagent"
+   "name": "autoapplyagent"
   },
   "language_info": {
    "codemirror_mode": {
@@ -115,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
